--- a/core/src/main/res/values/dimens.xml
+++ b/core/src/main/res/values/dimens.xml
@@ -43,4 +43,6 @@
   <dimen name="md_checkbox_prompt_margin_vertical">4dp</dimen>
   <dimen name="md_divider_height">1dp</dimen>
 
+  <dimen name="md_dialog_content_layout_padding_bottom">24dp</dimen>
+
 </resources>
